@@ -1,5 +1,9 @@
 2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
 
+	* SQLite.cs: minor changes to check in methods
+
+2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
+
 	* SQLite.cs: Huge changes here. Created 2 methods that
 	  everything can call to execute the db commands.
 
